--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <meta name="keywords" content="Freeland, blockchain, busineses">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Marcellus+SC" rel="stylesheet">
-  <link href="/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <!-- <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="/js/modernizr.js"></script> -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114623475-1"></script>
