--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <nav role="navigation" align="center" style="background-color: #0b4874;">
       <div class="container">
-        <a id="logo-container" href="" class="brand-logo amber-text text-accent-2 center"><img src="/img/logo.svg"><br />FreeZone</a>
+        <a id="logo-container" href="" class="brand-logo amber-text text-accent-2 center"><img src="img/logo.svg"><br />FreeZone</a>
         
     </nav>
 
