--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <!-- Google Tag Manager -->
   <script src="/js/tagmanager.js"></script>
   <!-- End Google Tag Manager -->
